[package]
name = "haax-mpq"
version = "2.0.1"
edition = "2021"

[dependencies]
log = "0.4"
stormlib = { git = "https://github.com/Haaxor1689/stormlib-rs" }
ignore = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
tokio = { version ="1.45.0", features = ["rt-multi-thread","macros"] }
env_logger = "0.11.8"
